--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "sweetalert": "^2.1.2",
+        "vue-cal": "^1.50.3",
         "vue-flash-message": "^0.7.2"
     }
 }
